test/release/examples/benchmarks/lulesh/test3DLulesh.good
./lulesh.chpl:79: error: halt reached - The 3D representation does not support reading input from files
cat: coords.out: No such file or directory
