test/release/examples/benchmarks/lulesh/test3DLulesh.timeout
# This timeout is currently required because the cray compiler takes roughly 6
# minutes to compile the generated code for this test. If compilation speed for
# this test gets better, this timeout can be removed.
600
